NameSpace.yml
#Namespace Format created by Krishnendu Bhowmick
apiVersion: v1
kind: Namespace
metadata:
  name:  test-ns
