DaemonSet.yml
#DaemonSet Format created by Krishnendu Bhowmick
#DaemonSet process will assign POD to each nodes of particular cluster. Here, in this process no need to mention number of replicals.
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: MYAPP
  namespace: default
  labels:
    app: MYAPP
spec:
  selector:
    matchLabels:
      app: MYAPP
  template:
    metadata:
      labels:
        app: MYAPP
    spec:
      tolerations:
      # this toleration is to have the daemonset runnable on master nodes
      # remove it if your masters can't run pods
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: MYAPP
        image: debian
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      terminationGracePeriodSeconds: 30
      volumes:
      - name: localtime
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
