statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-service
  namespace: default
spec:
  selector:
    matchLabels:
      app: mongodb-service # has to match .spec.template.metadata.labels
  serviceName: "mongodb-service"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: mongodb-service # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
          name: dbport
        volumeMounts:
        - name: mongodbvol
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodbvol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
